added account update

--- a/web/templates/accountList.html
+++ b/web/templates/accountList.html
@@ -227,16 +227,17 @@
                                     <div class="row">
                                         <div class="col-6">
                                             <div class="form-item">
-                                                <label for="accStatus">Status</label>
-                                                <input type="checkbox" class="custom-checkbox" name="accStatus"
-                                                    id="accStatus" required />
-                                            </div>
-                                        </div>
-                                        <div class="col-6">
-                                            <div class="form-item">
                                                 <label for="accEmail">Email</label>
                                                 <input type="text" class="custom-input" name="accEmail"
                                                     id="accEmail" required />
+                                            </div>
+                                        </div>
+
+                                        <div class="col-6">
+                                            <div class="form-item">
+                                                <label for="accStatus">Status</label>
+                                                <input type="checkbox" class="custom-checkbox" name="accStatus"
+                                                    id="accStatus" />
                                             </div>
                                         </div>
                                     </div>
