--- a/web/templates/account-create.html
+++ b/web/templates/account-create.html
@@ -179,8 +179,8 @@
                                             <div class="form-group">
                                                 <label for="selectOption">Role:</label>
                                                 <select class="form-select" id="role" name="role" required>
+                                                    <option value="2">Wholesaler</option>
                                                     <option value="1">Administrator</option>
-                                                    <option value="2">Uploader</option>
                                                 </select>
                                             </div>
                                         </div>
