--- a/web/templates/sidebarWholeseller.html
+++ b/web/templates/sidebarWholeseller.html
@@ -37,25 +37,37 @@
 
 
               <li class="sidebar-item">
-                <a
-                  class="sidebar-link waves-effect waves-dark sidebar-link"
-                  href="/NG999/withoutDeclaration"
-                  aria-expanded="false"
-                  ><i class="mdi mdi-table"></i
-                  ><span class="hide-menu" style="white-space: normal;">Customer List (Without Declaration)</span></span></a
-                >
-              </li>
+
+                <a class="sidebar-link has-arrow waves-effect waves-dark" aria-expanded="false">
+                  <span class="hide-menu">Declaration</span></a>
+  
+                <ul aria-expanded="false" class="collapse first-level pt-0 in">
 
 
-              <li class="sidebar-item">
+                <li class="sidebar-item">
+                <a class="sidebar-link" href="/NG999/withoutDeclaration" aria-expanded="false">
+                <i class="mdi mdi-table"></i>
+                <span class="hide-menu" style="white-space: normal;">-Single Declaration</span>
+      
+                </a>
+                </li>
+
+                 <li class="sidebar-item">
                 <a
-                  class="sidebar-link waves-effect waves-dark sidebar-link"
+                  class="sidebar-link"
                   href="/NG999/bundleDeclare"
-                  aria-expanded="false"
-                  ><i class="mdi mdi-table"></i
-                  ><span class="hide-menu" style="white-space: normal;">Bundle Declaration</span></span></a
-                >
+                  aria-expanded="false">
+                  <i class="mdi mdi-table"></i>
+                  <span class="hide-menu" style="white-space: normal;">-Bundle Declaration</span></a>
+                  </li>
+
+
+
+                </ul>
               </li>
+
+
+            
               
             </ul>
           </nav>
