Flash message for successful bundle declare

--- a/web/templates/bundleDeclare.html
+++ b/web/templates/bundleDeclare.html
@@ -389,7 +389,7 @@
                 })
                 .then(response => {
                     if (response.ok) {
-                        window.location.reload();
+                        window.location.href = "/NG999/bundleDeclare/1"
                     } else {
                         alert('Failed to declare bundle.');
                     
