--- a/web/templates/sidebarWholeseller.html
+++ b/web/templates/sidebarWholeseller.html
@@ -55,7 +55,7 @@
                  <li class="sidebar-item">
                 <a
                   class="sidebar-link"
-                  href="/NG999/bundleDeclare"
+                  href="/NG999/bundleDeclare/0"
                   aria-expanded="false">
                   <i class="mdi mdi-table"></i>
                   <span class="hide-menu" style="white-space: normal;">-Bundle Declaration</span></a>
