Added migration record number after upload and fix declaration for migration ab

--- a/web/templates/dataMigration.html
+++ b/web/templates/dataMigration.html
@@ -482,7 +482,7 @@
             let disclaimer = document.getElementById('modalDisc');
 
             if (pdpa.checked && disclaimer.checked){
-                document.getElementById('declareForm').submit();
+                document.getElementById('submitForm').submit();
             }
             else{
                 alert("Please check PDPA and Disclaimer");
