--- a/web/templates/logon.html
+++ b/web/templates/logon.html
@@ -55,10 +55,31 @@
             text-align: center;
             margin-top: 10px;
         }
+
+        body {
+            background-image: url(data:image/png;base64,{{ logonImg }});
+            background-size: 100% 100%;
+            background-position: center;
+            background-attachment: fixed;
+            margin: 0;
+            padding: 0;
+            height: 100vh;
+        }
+
+        .login-container {
+            background-color: rgba(255, 255, 255, 0.8); /* Add a semi-transparent white background to the login container */
+            padding: 20px;
+            border-radius: 10px;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
     </style>
 </head>
 <body>
-    <div class="login-container">
+    <div class="login-container" >
+
         <h2>Login</h2>
 
         {% include 'debug.html' %}
