--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -144,6 +144,7 @@
                 <div class="col-md-3">
                     <div class="card">
                         <div class="card-body">
+                        <i class="mdi mdi-account-plus"></i>
                             <h4 class="card-title">TOTAL WHOLESALER</h4>
                             <p class="card-text">{{dashList['wholeSaler']}}</p>
                         </div>
@@ -152,23 +153,25 @@
                 <div class="col-md-3">
                     <div class="card">
                         <div class="card-body">
+                        <i class="mdi mdi-checkbox-marked"></i>
                             <h4 class="card-title">ACTIVE WHOLESALER</h4>
-                            <p class="card-text">{{dashList['active']}}</p>
+                            <p class="card-text" style="color: green;">{{dashList['active']}}</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="card">
                         <div class="card-body">
+                        <i class="mdi mdi-close-box"></i>
                             <h4 class="card-title">INACTIVE WHOLESALER</h4>
-                            <p class="card-text">{{dashList['inactive']}}</p>
+                            <p class="card-text" style="color: red;">{{dashList['inactive']}}</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="card">
                         <div class="card-body">
-                            <!-- Card content for Card 4 -->
+                            <i class="mdi mdi-account-multiple-plus"></i>
                             <h4 class="card-title">TOTAL MIGRATE USER</h4>
                             <p class="card-text">{{dashList['totalCust']}}</p>
                         </div>
